tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/espejote-lb-service.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: rabbitmq-lb-service-manager
  namespace: custom-rabbitmq-cluster
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: rabbitmq-lb-service-manager
  namespace: custom-rabbitmq-cluster
rules:
  - apiGroups:
      - ''
    resources:
      - services
    verbs:
      - '*'
  - apiGroups:
      - espejote.io
    resources:
      - jsonnetlibraries
    verbs:
      - get
      - list
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: rabbitmq-lb-service-manager
  namespace: custom-rabbitmq-cluster
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: rabbitmq-lb-service-manager
subjects:
  - kind: ServiceAccount
    name: rabbitmq-lb-service-manager
    namespace: custom-rabbitmq-cluster
---
apiVersion: espejote.io/v1alpha1
kind: JsonnetLibrary
metadata:
  name: rabbitmq-lb-service
  namespace: custom-rabbitmq-cluster
spec:
  data:
    config.json:
      enabled: true
      loadBalancerClass: io.cilium/l2-announcer
---
apiVersion: espejote.io/v1alpha1
kind: ManagedResource
metadata:
  annotations:
    syn.tools/description: |
      This ManagedResource watches the Service created by the
      rabbitmq-operator for the RabbitmqCluster resource that's created by
      the Commodore component.

      The ManagedResource creates a copy of the RabbitmqCluster's primary
      service with `spec.type=LoadBalancer` and a user-configurable
      `spec.loadBalancerClass`. The values of `metadata.annotations`,
      `spec.ports` and `spec.selector` are copied from the
      operator-managed Service and updated whenever the operator makes any
      changes.
  name: rabbitmq-lb-service
  namespace: custom-rabbitmq-cluster
spec:
  applyOptions:
    force: true
  context:
    - name: services
      resource:
        apiVersion: v1
        kind: Service
        name: custom-rabbitmq
        namespace: custom-rabbitmq-cluster
  serviceAccountRef:
    name: rabbitmq-lb-service-manager
  template: |
    local esp = import 'espejote.libsonnet';
    local config = import 'rabbitmq-lb-service/config.json';

    local svcs = esp.context().services;
    assert std.length(svcs) == 1 : 'Expected exactly 1 service in services context';
    local svc = svcs[0];

    {
      apiVersion: 'v1',
      kind: 'Service',
      metadata: {
        annotations: std.get(svc.metadata, 'annotations', {}),
        name: '%s-lb' % svc.metadata.name,
        namespace: svc.metadata.namespace,
      },
      spec: {
        type: 'LoadBalancer',
        loadBalancerClass: '%(loadBalancerClass)s' % config,
        ports: svc.spec.ports,
        selector: svc.spec.selector,
      },
    }
  triggers:
    - name: service
      watchContextResource:
        name: services
    - name: jsonnetlib
      watchResource:
        apiVersion: espejote.io/v1alpha1
        kind: JsonnetLibrary
        name: rabbitmq-lb-service
        namespace: custom-rabbitmq-cluster
