tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: custom-rabbitmq-cluster
    test.net: true
  name: custom-rabbitmq-cluster
