tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/prober-alert-rules.yaml
apiVersion: monitoring.coreos.com/v1
kind: PrometheusRule
metadata:
  name: rabbitmq-prober-alerts
  namespace: custom-rabbitmq-cluster
spec:
  groups:
    - name: rabbitmq.alerts
      rules:
        - alert: RabbitMQDown
          annotations:
            description: RabbitMQ in namespace {{ $labels.namespace }} has been down
              for more than 1 minute
            summary: RabbitMQ is down
          expr: max by (job, cluster_id, namespace) (rabbitmq_functional_availability)
            == 0
          for: 2m
          labels:
            severity: warning
            syn: 'true'
            syn_component: rabbitmq-operator
            syn_team: schedar
        - alert: RabbitMQProbeFailures
          annotations:
            description: RabbitMQ prober in namespace {{ $labels.namespace }} has
              failed {{ $value }} times in the last 5 minutes
            summary: Multiple RabbitMQ probe failures
          expr: increase(rabbitmq_probe_failures_total[5m]) > 3
          for: 0m
          labels:
            severity: warning
            syn: 'true'
            syn_component: rabbitmq-operator
            syn_team: schedar
