tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/prober-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq-prober
  name: rabbitmq-prober
  namespace: rabbitmq
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-prober
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rabbitmq-prober
    spec:
      containers:
        - env:
            - name: RABBITMQ_HOST
              valueFrom:
                secretKeyRef:
                  key: host
                  name: rabbitmq-default-user
            - name: RABBITMQ_PORT
              valueFrom:
                secretKeyRef:
                  key: port
                  name: rabbitmq-default-user
            - name: RABBITMQ_USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: rabbitmq-default-user
            - name: RABBITMQ_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: rabbitmq-default-user
            - name: PROBE_INTERVAL
              value: '10'
            - name: METRICS_PORT
              value: '8080'
            - name: RABBITMQ_USE_TLS
              value: 'true'
          image: ghcr.io/projectsyn/component-rabbitmq-operator/prober:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: prober
          ports:
            - containerPort: 8080
              name: metrics
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      restartPolicy: Always
