tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/prober-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq-prober
  name: rabbitmq-prober-service
  namespace: custom-rabbitmq-cluster
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: rabbitmq-prober
  type: ClusterIP
