tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: read-access
  namespace: custom-rabbitmq-cluster
rules:
  - apiGroups:
      - ''
    resources:
      - pods
      - secrets
      - configmaps
      - services
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - apps
    resources:
      - deployments
      - statefulsets
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - route.openshift.io
    resources:
      - routes
    verbs:
      - get
      - list
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: read-access-binding
  namespace: custom-rabbitmq-cluster
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: read-access
subjects:
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: group
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: my-other-group
