tests/golden/custom/custom/custom/rabbitmq-operator/instance/rabbitmq-instance/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amqps
  namespace: custom-rabbitmq-cluster
spec:
  host: amqps.rabbitmq.com
  port:
    targetPort: amqps
  tls:
    termination: passthrough
  to:
    kind: Service
    name: custom-rabbitmq
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: management
  namespace: custom-rabbitmq-cluster
spec:
  host: management.rabbitmq.com
  port:
    targetPort: management-tls
  tls:
    termination: passthrough
  to:
    kind: Service
    name: custom-rabbitmq
